- added shadow surface for wide screens (2020/06/05 MS)
- removed all inline keywords to work with GCC 5 (2015/05/16 MS)

1.0.19:
- removed link to lib math as not needed (2013/10/29 MS)
- reset key states when unpausing to prevent unwanted movement (2013/10/29 MS)

1.0.18:
- added vertical delay option (2011/10/29 MS)

1.0.17:
- shift block if rotation would fail because of boundary (2011/08/25 MS)
- allow leaving game over screen by any key not only ESC (2011/08/22 MS)
- made pause key configurable (2011/08/22 MS)

1.0.16:
- improved random number generator (2011/03/02 MS)
- generate pieces according to official Tetris guidelines (2011/03/02 Andrey
Maykov)
- always deal same sequence of pieces to all players (2011/03/02 MS)
- in expert mode deal most unsuitable piece out of current bag instead
  of random piece (2011/03/02 MS)

1.0.15:
- reenabled compiler option -Wall and fixed some warnings (20/09/10 MS)
- renamed (unused) full non-ascii turkish and portugese localizations to 
  prevent warnings (20/09/10 MS)
- added italian localization (20/09/10 Kenyu)

1.0.14:
- added missing include for locale (25/12/09 CT)
- fixed too short size in several memset calls (25/12/09 MS)
- increased range for horizontal block delay to 9 (24/12/09 CT)
- fixed incorrect english (penalty instead of malus) (24/12/09 CT)
- added XDG support (24/12/09 MS)

1.0.13:
- enable block drop shadow per default (09/10/25 MS)
- use translation independent chart ids (09/10/25 MS)
- added swedish translation (08/08/26 NG)
- added french translation and special character free pt and tr versions
  (08/04/06 JJ)

1.0.12:
- added portugese translation (08/03/29 JJ)
- removed -Wall from CC arguments for better portability
  (06/04/01 PM)
- l10n of yes/no keys (05/10/10 R.S.)

1.0.11:
- i18n support and german l10n added (05/10/04 M.S.)
- smooth_hori is 0 by default (looks less nice but is better to handle)
  (05/10/04 M.S.)
  
1.0.10:
- added configure option to let all lines, sent in one go to your